# sil-kit-adapters-qemu

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CHANGELOG.rst  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  README.rst  build-vib-qemu-demos-guest  run-vib-qemu-demos-guest
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: new-issue.md
.github/actions/build-cmake-preset/: action.yml
.github/workflows/: build-linux-and-windows-release.yml  repo-sync-public.yaml  trigger-adapters-ci.yaml  trigger-pkg-workflow.yaml  trigger-ska-integration-tests.yaml  trigger-ska-quality-checks.yaml
adapter/: CMakeLists.txt  Exceptions.hpp  Parsing.cpp  Parsing.hpp  SignalHandler.cpp  SignalHandler.hpp  SilKitAdapter.cpp  SilKitAdapter.hpp  SilKitAdapterQemu.cpp  SilKitAdapterQemu.hpp
chardev/: README.md
chardev/Utility/: StringUtils.hpp
chardev/adapter/: CMakeLists.txt  ChardevSocketToPubSubAdapter.cpp  ChardevSocketToPubSubAdapter.hpp  SilKitAdapterQemuChardev.cpp
chardev/demos/: SilKitConfig_Adapter.silkit.yaml  SilKitConfig_CANoe.silkit.yaml
chardev/demos/CANoe/: ButtonControl.can  Datasource_device.vcdl  Datasource_observer.vcdl  Datasource_temperature_control.vcdl  Datasource_temperature_sensing.vcdl  DemoPanel_device.xvp  DemoPanel_observer.xvp  InterfaceControl_device.can  InterfaceControl_observer.can  Panel1.xvp  ProjectSettings.vtesettings  Qemu_Chardev_adapter_CANoe.cfg  Qemu_Chardev_demo_CANoe_device.cfg  Qemu_Chardev_demo_CANoe_device.stcfg  Qemu_Chardev_demo_CANoe_observer.cfg  Qemu_Chardev_demo_CANoe_observer.stcfg  Qemu_Chardev_demo_CANoe_temperature_control.cfg  Qemu_Chardev_demo_CANoe_temperature_sensing.cfg  TemperatureControl.can  TemperatureControlPanel.xvp  TemperatureSensing.can  TemperatureSensingPanel.xvp
chardev/demos/CANoe4SW_SE/: createEnvForLinux.ps1  createEnvironment.sh  run.ps1  run.sh  run_all.ps1  run_all.sh  venvironment.yaml
chardev/demos/SimpleEcho/: CMakeLists.txt  SilKitDemoChardevEchoDevice.cpp
chardev/demos/tests/: testQemuEchoDemo.can  testQemuEchoDemo.vtesttree.yaml  testQemuEchoDemo.vtestunit.yaml
chardev/demos/vTESTstudio/: vTESTstudio_Projekt.vtsoproj
cmake/: SilKitAdapterVersion.cmake
demos/Ethernet/IcmpEchoDevice/: CMakeLists.txt  Device.cpp  Device.hpp  IbDemoEthernetIcmpEchoDevice.cpp
demos/Ethernet/QemuAdapter/: CMakeLists.txt  IbDemoEthernetQemuAdapter.cpp
demos/Ethernet/Utility/: ArpIp4Packet.cpp  BufferReader.cpp  BufferReader.hpp  BufferWriter.cpp  BufferWriter.hpp  Enums.cpp  Enums.hpp  EthernetAddress.hpp  EthernetHeader.hpp  Exceptions.cpp  Exceptions.hpp  FormattedBuffer.cpp  Icmp4Header.hpp  InternetChecksum.cpp  InternetChecksum.hpp  Ip4Header.cpp  (+5 more)
demos/TimeSyncPlugin/Plugin/: CMakeLists.txt  ExecutionManager.hpp  Options.hpp  TimeSyncPlugin.cpp
demos/guest/: CMakeLists.txt  udp-ping-pong.cpp
demos/host/: CMakeLists.txt  DirectQemuSocket.cpp  IbDemoEthernetDevice.cpp  IbDemoEthernetQemu.cpp  QemuSocketClient.hpp  qemu-ethernet-socket.cpp
demos/host/device/: Device.cpp  Device.hpp
demos/host/util/: ArpIp4Packet.cpp  ArpIp4Packet.hpp  BufferReader.cpp  BufferReader.hpp  BufferWriter.cpp  BufferWriter.hpp  Enums.cpp  Enums.hpp  EthernetAddress.cpp  EthernetAddress.hpp  EthernetHeader.cpp  EthernetHeader.hpp  Exceptions.cpp  Exceptions.hpp  FormattedBuffer.cpp  FormattedBuffer.hpp  Icmp4Header.cpp  Icmp4Header.hpp  Icmp4Packet.cpp  Icmp4Packet.hpp  InternetChecksum.cpp  InternetChecksum.hpp  Ip4Address.cpp  Ip4Address.hpp  Ip4Header.cpp  Ip4Header.hpp  ParseResult.cpp  ParseResult.hpp  ReadUintBe.cpp  ReadUintBe.hpp  WriteUintBe.cpp  WriteUintBe.hpp
docs/man/: CMakeLists.txt  sil-kit-adapter-qemu.1
eth/: README.md  README.rst
eth/Utility/: ArpIp4Packet.cpp  ArpIp4Packet.hpp  BufferReader.cpp  BufferReader.hpp  BufferWriter.cpp  BufferWriter.hpp  CMakeLists.txt  Enums.cpp  Enums.hpp  EthernetAddress.cpp  EthernetAddress.hpp  EthernetHeader.cpp  EthernetHeader.hpp  FormattedBuffer.cpp  FormattedBuffer.hpp  Icmp4Header.cpp  Icmp4Header.hpp  InternetChecksum.cpp  InternetChecksum.hpp  Ip4Address.cpp  Ip4Address.hpp  Ip4Header.cpp  Ip4Header.hpp  ParseResult.cpp  ParseResult.hpp  ReadUintBe.cpp  ReadUintBe.hpp  WriteUintBe.cpp  WriteUintBe.hpp
eth/adapter/: CMakeLists.txt  EthSocketToEthControllerAdapter.cpp  EthSocketToEthControllerAdapter.hpp  SilKitAdapterQemuEthernet.cpp
eth/demos/: CMakeLists.txt  SilKitConfig_Adapter.silkit.yaml  SilKitConfig_CANoe.silkit.yaml
eth/demos/IcmpEchoDevice/: CMakeLists.txt  Device.cpp  Device.hpp  SilKitDemoEthernetIcmpEchoDevice.cpp
qemu-eth-adapter/: CMakeLists.txt
qemu-eth-adapter/demos/Ethernet/: CMakeLists.txt
qemu-eth-adapter/demos/Ethernet/CANoe/: CANoe_SILKit_config.json
qemu-eth-adapter/demos/Ethernet/IcmpEchoDevice/: CMakeLists.txt  Device.cpp  Device.hpp  IbDemoEthernetIcmpEchoDevice.cpp  SilKitDemoEthernetIcmpEchoDevice.cpp
qemu-eth-adapter/demos/Ethernet/QemuAdapter/: IbDemoEthernetQemuAdapter.cpp
qemu-eth-adapter/demos/Ethernet/Utility/: ArpIp4Packet.hpp  BufferReader.cpp  CMakeLists.txt  EthernetAddress.cpp  FormattedBuffer.hpp  Icmp4Header.cpp  InternetChecksum.cpp  InternetChecksum.hpp  ParseResult.hpp
qemu-eth-adapter/demos/TimeSyncPlugin/: CMakeLists.txt  README.md
qemu-eth-adapter/tools/: setup-host-wsl2-ubuntu.sh
qemu-eth-adapter/tools/virt-builder/debian/: install.110.setup-sshd.sh
qmp/: README.md
qmp/demos/: Datasource_qmp.vcdl  SilKitConfig_Adapter.silkit.yaml  SilKitConfig_CANoe.silkit.yaml
spi/: README.md
spi/adapter/: CMakeLists.txt  SilKitAdapterQemuSpi.cpp
spi/demos/: CMakeLists.txt
spi/demos/SimpleEcho/: CMakeLists.txt  SilKitDemoSpiEchoDevice.cpp
time_sync/: CMakeLists.txt  README.md
time_sync/Plugin/: CMakeLists.txt
time_sync/demos/: CMakeLists.txt  ControlSync.cpp
tools/: README.md  build-silkit-qemu-demos-guest  build-silkit-qemu-demos-guest.sh  build-vib-qemu-demos-guest  run-silkit-qemu-demos-guest  run-silkit-qemu-demos-guest.ps1  run-silkit-qemu-demos-guest.sh  run-vib-qemu-demos-guest  setup-host-ubuntu.sh  setup-host-wsl2-ubuntu.sh
(+56 files in other folders)
